--- a/app/src/main/assets/www/views/test-drag.html
+++ b/app/src/main/assets/www/views/test-drag.html
@@ -221,7 +221,10 @@
             onRemove: function (evt){ console.log('onRemove.foo:', [evt.item, evt.from]); },
             onStart:function(evt){ console.log('onStart.foo:', [evt.item, evt.from]);},
             onSort:function(evt){ console.log('onStart.foo:', [evt.item, evt.from]);},
-            onEnd: function(evt){ console.log('onEnd.foo:', [evt.item, evt.from]);}
+            onEnd: function(evt){
+//                console.log('onEnd.foo:', evt.item);
+                console.log($(evt.item).html());$(evt.item).addClass("xx")
+            }
         });
 
 
@@ -232,7 +235,10 @@
             onUpdate: function (evt){ console.log('onUpdate.bar:', evt.item); },
             onRemove: function (evt){ console.log('onRemove.bar:', evt.item); },
             onStart:function(evt){ console.log('onStart.foo:', evt.item);},
-            onEnd: function(evt){ console.log('onEnd.foo:', evt.item);}
+            onEnd: function(evt){
+//                console.log('onEnd.foo:', evt.item);
+                console.log($(evt.item).html());$(evt.item.li).addClass("xx")
+            }
         });
 
 
