--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -103,7 +103,15 @@
     <audio loop="loop" src="images/mymusic.mp3" id="media" preload="preload"></audio>
 </div>
 
-
+<div id="prBack" style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
+    back
+</div>
+<div id="prEdit" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
+    edit
+</div>
+<div id="publish" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
+    publish
+</div>
 <script>
     var lanren = {
         changeClass: function (target,id) {
