--- a/app/src/main/assets/www/views/footer.html
+++ b/app/src/main/assets/www/views/footer.html
@@ -1,3 +1,15 @@
+<div id="prBack" style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
+    back
+</div>
+<div id="prEdit" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
+    edit
+</div>
+<div id="publish" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
+    publish
+</div>
+
+<script src="file:///android_asset/www/public/js/cordova.js"></script>
+<script src="file:///android_asset/www/public/js/preview.js"></script>
 
 <script>
     var lanren = {
