--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -1,1 +1,190 @@
-xx
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title></title> <!-- 移动设备支持 -->
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport">
+    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
+    <meta content="no-cache" http-equiv="pragma">
+    <meta content="0" http-equiv="expires">
+    <meta content="telephone=no, address=no" name="format-detection">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link href="file:///android_asset/www/public/css/reset1.css" rel="stylesheet" type="text/css">
+    <link href="file:///android_asset/www/public/css/mod1.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/font.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/animation.css" type="text/css">
+    <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
+    <style>        footer {
+        display: block;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        line-height: 2.5;
+        color: #fff;
+        font-size: 12px;
+        text-align: center;
+        background-color: #333;
+        z-index: 100;
+        opacity: 0.6
+    }
+
+    footer a {
+        color: white;
+    }    </style>
+    <script>        var gd = true;//true:无限滚动，false:到最后页不能再滚    </script>
+</head>
+<body>
+<div class="p-index main" id="con">
+    <section class="m-page hide">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 data="600,900">
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
+                        classictranslation corpus, the combination of network technology and language essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 data="600,900">
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
+                        classictranslation corpus, the combination of network technology and language essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 data="600,900">
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
+                        classictranslation corpus, the combination of network technology and language essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 data="600,900">
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 2;">
+                    <div class="pages-img edit-area"><img data-name="img1" style=""
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                        width="50" height="50">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
+                        classictranslation corpus, the combination of network technology and language essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="u-arrow"><img src="file:///android_asset/www/public/img/btn01_arrow.png"/></section>
+</div>
+<div id="audio-btn" class="on">
+    <audio loop="loop" src="null" id="media" preload="preload"></audio>
+</div>
+<div id="prBack"
+     style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
+    back
+</div>
+<div id="prEdit"
+     style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
+    edit
+</div>
+<div id="publish"
+     style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
+    publish
+</div>
+<script src="file:///android_asset/www/public/js/cordova.js"></script>
+<script type="text/javascript">    $(function () {
+    $("#prBack").click(function () {
+        console.info("prBack");
+        cordova.exec(function (retval) {
+               //alert(retval);                showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "back", []);        });        $("#prEdit").click(function(){            console.info("prEdit");            cordova.exec(function(retval) {                //alert(retval);                //showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "edit",[]);        });        $("#publish").click(function(){            console.info("#publish");            var retHtml = '<div  class="p-index main" id="con">',retImg = [], $con= $("#con");            retHtml += $con.html();            retHtml += '</div>';            $con.find(".pages-img").each(function(){                var me = $(this);                if(me.hasClass("pages-img-bg")) {                    retImg.push(me.css("background-image").split("url(")[1].split(")")[0]);                } else {                    retImg.push(me.find("img").attr("src"));                }            });            cordova.exec(function(retval) {               //alert(retval);                //showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "publish", [retHtml,retImg]);        })    })</script>
+<script>
+    var lanren = {
+    changeClass: function (target, id) {
+        var className = $(target).attr('class');
+        var ids = document.getElementById(id);
+        (className == 'on') ? $(target).removeClass('on').addClass('off') : $(target).removeClass('off').addClass('on');
+        (className == 'on') ? ids.pause() : ids.play();
+    }, play: function () {
+        document.getElementById('media').play();
+    }
+}
+lanren.play();
+$(function () {
+    $("#audio-btn").click(function () {
+        lanren.changeClass(this, 'media')
+    });
+})
+<!--代码部分end--></script>
+<script type="text/javascript" src="file:///android_asset/www/public/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="file:///android_asset/www/public/js/page_scroll_bx.js"></script>
+</body>
+</html>
