--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -12,12 +12,12 @@
     <meta content="telephone=no, address=no" name="format-detection">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link href="file:///android_asset/www/public/css/reset1.css" rel="stylesheet" type="text/css">
-    <link href="file:///android_asset/www/public/css/mod1.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="file:///android_asset/www/public/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="file:///android_asset/www/public/css/font.css" type="text/css">
-    <link rel="stylesheet" href="file:///android_asset/www/public/css/animation.css" type="text/css">
-    <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
+    <link href="../public/css/reset1.css" rel="stylesheet" type="text/css">
+    <link href="../public/css/mod1.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../public/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/font.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/animation.css" type="text/css">
+    <script type="text/javascript" src="../public/js/jquery-1.8.2.min.js"></script>
     <style>        footer {
         display: block;
         position: fixed;
@@ -42,17 +42,17 @@
     <section class="m-page hide">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 style="background: url(./img/bg.jpg);background-position: 100% 100%;background-size:cover;width:100%;height:100%;"
                  data="600,900">
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
@@ -68,17 +68,17 @@
     <section class="m-page hide">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
                  data="600,900">
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
@@ -94,17 +94,17 @@
     <section class="m-page hide">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
                  data="600,900">
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
@@ -120,17 +120,17 @@
     <section class="m-page hide">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
+                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
                  data="600,900">
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 2;">
                     <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
+                                                          src="./img/icon-earth.png"/
                         width="50" height="50">
                     </div>
                 </div>
@@ -143,7 +143,7 @@
             </div>
         </div>
     </section>
-    <section class="u-arrow"><img src="file:///android_asset/www/public/img/btn01_arrow.png"/></section>
+    <section class="u-arrow"><img src="../public/img/btn01_arrow.png"/></section>
 </div>
 <div id="audio-btn" class="on">
     <audio loop="loop" src="null" id="media" preload="preload"></audio>
@@ -160,7 +160,7 @@
      style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
     publish
 </div>
-<script src="file:///android_asset/www/public/js/cordova.js"></script>
+<script src="../public/js/cordova.js"></script>
 <script type="text/javascript">    $(function () {
     $("#prBack").click(function () {
         console.info("prBack");
@@ -184,7 +184,7 @@ $(function () {
     });
 })
 <!--代码部分end--></script>
-<script type="text/javascript" src="file:///android_asset/www/public/js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="file:///android_asset/www/public/js/page_scroll_bx.js"></script>
+<script type="text/javascript" src="../public/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="../public/js/page_scroll_bx.js"></script>
 </body>
 </html>
