--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!--域名 结尾不能有斜杠-->
-    <string name="app_domain">192.168.31.225/wisape/github/wis/</string>
+    <string name="app_domain">106.75.196.252</string>
     <string name="www_schema">http</string>
-    <string name="www_host">192.168.31.225/wisape/github/wis/</string>
+    <string name="www_host">106.75.196.252</string>
     <string name="www_port">80</string>
     <string name="www_path">index.php/v1</string>
     <string name="www_version">v1</string>
