--- a/app/src/main/res/layout/activity_story_release.xml
+++ b/app/src/main/res/layout/activity_story_release.xml
@@ -40,6 +40,7 @@
         <View style="@style/View.Divider" />
 
         <LinearLayout
+            android:id="@+id/linear_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
