--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -19,7 +19,8 @@
         <ImageView
             android:id="@+id/main_story_bg"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@drawable/gallery_item_story_bg"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -75,7 +76,8 @@
                     android:drawableLeft="@mipmap/icon_share"
                     android:drawablePadding="3dp"
                     android:gravity="center|left"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
 
                 <ImageView
                     android:layout_width="1dp"
