--- a/app/src/main/assets/www/views/test3.html
+++ b/app/src/main/assets/www/views/test3.html
@@ -3,47 +3,27 @@
     <title>Angular JS Custom Directives</title>
 </head>
 <body>
-<h2>AngularJS Sample Application</h2>
-<div ng-app="mainApp" ng-controller="StudentController">
-    <student name="Mahesh"></student><br/>
-    <student name="Piyush"></student>
+<div id="test">
+
 </div>
-<script src="../cs/public/js/angular.min.js"></script>
+<script src="../cs/public/js/jquery.js"></script>
+<script src="../public/js/template.js"></script>
 <script>
-    var mainApp = angular.module("mainApp", []);
+    var catScroll = $("#cat-scroll");
+    var source = ''
+            +    '{{each list as value i}}'
+            +        '{{if value.title}}1 {{/if}}'
+            +    '{{/each}}'
+            + '</ul>';
 
-    mainApp.directive('student', function() {
-        var directive = {};
-        directive.restrict = 'E';
-        directive.template = "Student: <b>{{student.name}}</b> , Roll No: <b>{{student.rollno}}</b>";
 
-        directive.scope = {
-            student : "=name"
-        }
 
-        directive.compile = function(element, attributes) {
-            element.css("border", "1px solid #cccccc");
-
-            var linkFunction = function($scope, element, attributes) {
-                element.html("Student: <b>"+$scope.student.name +"</b> , Roll No: <b>"+$scope.student.rollno+"</b><br/>");
-                element.css("background-color", "#ff00ff");
-            }
-
-            return linkFunction;
-        }
-
-        return directive;
+    var render = template.compile(source);
+    var html = render({
+        list: [{title : 0,content:"http://106.75.196.252/uploads/fonts/preview_image/Bookman Old Style.png"},{title:1,content:"content2"}]
     });
 
-    mainApp.controller('StudentController', function($scope) {
-        $scope.Mahesh = {};
-        $scope.Mahesh.name = "Mahesh Parashar";
-        $scope.Mahesh.rollno  = 1;
-
-        $scope.Piyush = {};
-        $scope.Piyush.name = "Piyush Parashar";
-        $scope.Piyush.rollno  = 2;
-    });
+    document.getElementById('test').innerHTML = html;
 
 </script>
 </body>
