--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -37,27 +37,27 @@
     <div class="pages" id="pages-scroll" >
         <ul>
             <li class="active">
-                <div class="stage-content edit-area pages-img pages-img-bg"
-                     style="background-image: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;">
-                    <div class="symbol" style="background:red;">
-                        <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                              src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
-                            width="50" height="50">
-                        </div>
-                    </div>
-                    <div class="symbol" style="background: green;">
-                        <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                              src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/
-                            width="50" height="50">
-                        </div>
-                    </div>
-                    <div class="symbol" style="z-index: 3;">
-                        <div class="pages-txt edit-area"
-                             style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
-                            classictranslation corpus, the combination of network technology and language essence
-                        </div>
-                    </div>
-                </div>
+                <!--<div class="stage-content edit-area pages-img pages-img-bg"-->
+                     <!--style="background-image: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;">-->
+                    <!--<div class="symbol" style="background:red;">-->
+                        <!--<div class="pages-img edit-area"><img data-name="img1" style=""-->
+                                                              <!--src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/-->
+                            <!--width="50" height="50">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="symbol" style="background: green;">-->
+                        <!--<div class="pages-img edit-area"><img data-name="img1" style=""-->
+                                                              <!--src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/-->
+                            <!--width="50" height="50">-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="symbol" style="z-index: 3;">-->
+                        <!--<div class="pages-txt edit-area"-->
+                             <!--style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the-->
+                            <!--classictranslation corpus, the combination of network technology and language essence-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
             </li>
         </ul>
     </div>
@@ -353,7 +353,6 @@
             target.find(".icon-correct").hide();
             target.find(".icon-download").hide();
             target.find(".download-progress-bar").show().find(".download-progress-percent").css({"width":data.progress*100 + "%"});
-
         }
 
         function onFontCompleted(data) {
