--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="pages" id="pages-scroll" >
         <ul>
-            <li class="active">
+            <!--<li class="active">-->
                 <!--<div class="stage-content edit-area pages-img pages-img-bg"-->
                      <!--style="background-image: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;">-->
                     <!--<div class="symbol" style="background:red;">-->
@@ -58,7 +58,7 @@
                         <!--</div>-->
                     <!--</div>-->
                 <!--</div>-->
-            </li>
+            <!--</li>-->
         </ul>
     </div>
     <span class="icon-add-stage" id="AddNewStage"></span>
