--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,6 +9,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
     <TextView
+        android:id="@+id/text_privacy"
         style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,6 +19,7 @@
         android:text="@string/about_privacy_policy" />
 
     <TextView
+        android:id="@+id/text_terms"
         style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
         android:layout_marginTop="64dp"/>
 
     <TextView
+        android:id="@+id/text_rate"
         style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
